[project]
name = "pandas_commons"
version = "0.1.0"
description = "Pandas helper library."
authors = [
    {name = "Eli Hubscher", email = "eliyahu.hubscher@icloud.com"},
]
license-expression = "MIT"
dependencies = [
    "openpyxl>=3.0.9",
    "pandas>=1.4.1",
    "regex>=2022.3.15",
    "xlrd>=2.0.1"
]
requires-python = ">=3.9"

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
